# diesel_demo

./: .env  .gitignore  Cargo.toml
src/: lib.rs  main.rs  models.rs  schema.rs
tests/: custom_types.rs  lib.rs  testschema.rs
