[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.6", features = ["mysql", "chrono", "bigdecimal"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "*"